<resources>
    <string name="app_name">HBM</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="ingresar">Ingresar</string>
    <string name="resultado">Resultado</string>
    <string name="nombreEmpresa">HANSA BUSINESS MOBILE</string>

    <string name="login_ok">Bienvenido: %s</string>
    <string name="login_error">Usuario o contraseña incorrecta</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>


</resources>
