<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hansa.com.bo.hbm.MainActivity"
    android:orientation="vertical"
    android:background="#2E64FE"
    android:id="@+id/lyPadre"
    android:padding="24dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"

        android:layout_weight="0.74"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/lblEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="70dp"
        android:textColor="@color/colorText"
        android:text="@string/nombreEmpresa" />

    <TextView
        android:id="@+id/lblUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_weight="0.02"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorText"
        android:text="@string/usuario" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="15dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="0.04"
        android:textColor="@color/colorText"
        android:text="@string/password" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="0.04"

        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.03"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="10dp"
        android:background="#25B03A"
        android:textColor="@color/colorText"
        android:text="@string/ingresar" />

    <TextView
        android:id="@+id/lblResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="0.02"
        android:text="@string/resultado" />


</LinearLayout>
